--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,13 +39,22 @@ android {
 dependencies {
 
     //noinspection GradleDependency (we don't want to update this!)
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    //implementation 'androidx.appcompat:appcompat:1.4.2'
+    //implementation 'com.google.android.material:material:1.7.0'
+    //implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    //testImplementation 'junit:junit:4.13.2'
+    //testImplementation 'org.robolectric:robolectric:4.9'
+    //testImplementation 'androidx.test:core:1.5.0'
+    //testImplementation 'androidx.test.ext:junit:1.1.5'
+    //androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    //androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.robolectric:robolectric:4.9'
     testImplementation 'androidx.test:core:1.5.0'
     testImplementation 'androidx.test.ext:junit:1.1.5'
+    testImplementation 'org.robolectric:robolectric:4.9'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
